<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Views.HomeScreen.HomeScreen">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imSzenario"
        android:src="@drawable/szenario"
        android:layout_gravity="start|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="50dp"
        android:paddingStart="20dp"
        android:contentDescription="@string/string_Scenario"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imSettings"
        android:src="@drawable/settings"
        android:layout_gravity="end|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imRoom"
        android:paddingBottom="50dp"
        android:contentDescription="@string/string_Settings" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imDevice"
        android:src="@drawable/lamp"
        android:layout_gravity="end|center_vertical"
        android:layout_alignBottom="@+id/imRoom"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/string_Devices" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imRoom"
        android:src="@drawable/room"
        android:layout_gravity="start|center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="50dp"
        android:contentDescription="@string/string__Room" />
</RelativeLayout>
