<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Dialogs.DryerSettings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/string_Notfallszenario"
        android:id="@+id/textViewClothes"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/np_Frequency"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewAmount"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/string_Camera_Title"
        android:id="@+id/textViewAmount"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/np_Emergency"
        android:layout_below="@+id/textViewClothes"
        android:layout_alignStart="@+id/textViewClothes"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_NotfallAutomatik"
        android:id="@+id/cb_autoEmergency"
        android:checked="false"
        android:layout_below="@+id/np_Emergency"
        android:layout_alignEnd="@+id/np_Emergency" />

</RelativeLayout>
